Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextObjNumberField.quorum
class Main
    number v = 5.0
    action Main
        Test(v)
    end

    action Test(Text var)
    end
end
